SpringMVC 整合 Redis, 提供 Jedis 和 RedisTemplate 两种实现, 并模拟 SpringBoot 自动配置: 根据是否存在 Redis 服务来动态选择是否启动 Redis 相关 Bean 的注册

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,20 @@
             <version>1.9.5</version>
         </dependency>
 
+        <!-- Spring 对于 Redis 的支持 -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>2.2.6.RELEASE</version>
+        </dependency>
+
+        <!-- Redis 官方推荐的 Java 端操作 Redis 的 API -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
         <!--
         lombok
         Tips 用于简化 Model 的代码
