添加一个条件来控制启动时是否开启 ActiveMQ

--- a/src/main/resources/properties/activemq.properties
+++ b/src/main/resources/properties/activemq.properties
@@ -1,3 +1,6 @@
+# 是否开启 ActiveMQ
+activemq.start=false
+
 activemq.username=admin
 activemq.password=admin
 activemq.brokerUrl=failover:tcp://localhost:61616
